--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,12 @@ p {
 button {
     padding: 5px;
     border-radius: 8px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: aquamarine;
+    color: black;
 }
 
 
